plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.6.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.json:json:20210307'
    testImplementation 'junit:junit:4.13.2'
}

group = 'com.adventofcode'
version = '1.0-SNAPSHOT'
sourceCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

tasks.withType(Test) {
//  uncomment below if you want preview features
//  jvmArgs += "--enable-preview"
    systemProperty "print", System.getProperty("print")
    systemProperty "file.encoding", "UTF-8"

    testLogging {
        outputs.upToDateWhen {false}
        showStandardStreams = true
    }
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
}
/*
uncomment this section if you want preview features
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
*/

compileKotlin {
    kotlinOptions {
        jvmTarget = sourceCompatibility
    }
}
